# hive-desktop

./: .gitignore  LICENSE  README.md  hive-desktop.db-shm  hive-desktop.db-wal  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: globals.css  router.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
apps/desktop/src/components/: confirm-dialog.test.tsx  confirm-dialog.tsx  error-boundary.test.tsx  error-boundary.tsx
apps/desktop/src/hooks/: use-runtime.test.ts  use-runtime.ts  use-servers.test.ts  use-servers.ts  use-websocket-editor.ts  use-websocket.test.ts  use-websocket.ts  use-workflows.test.ts  use-workflows.ts
apps/desktop/src/lib/: constants.test.ts  constants.ts  runtime-client.test.ts  (+4 more)
tests/integration/: server-management.test.ts  vault-credentials.test.ts  workflow-lifecycle.test.ts
tests/runtime/: auditor.test.ts  client.test.ts  context.test.ts  engine-security.test.ts  engine.test.ts  health.test.ts  installer.test.ts  logger.test.ts  manager.test.ts  planner.test.ts  provider.test.ts  registry.test.ts  routes-ai-audit.test.ts  routes-ai.test.ts  routes-market.test.ts  routes-servers.test.ts  routes-vault.test.ts  routes-workflows.test.ts  runner.test.ts  scheduler-security.test.ts  scheduler.test.ts  templates.test.ts  vault.test.ts
(+70 files in other folders)
