[package]
name = "hive-desktop"
version = "0.1.0"
description = "Local AI Agent Workflow Runtime"
authors = ["Hive"]
edition = "2021"

[lib]
name = "hive_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "hive-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
