[package]
name = "hive-desktop"
version = "0.3.2"
description = "Local AI Agent Workflow Runtime"
authors = ["Hive"]
edition = "2021"

[lib]
name = "hive_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "hive-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
